--- a/source/pug/about-us.pug
+++ b/source/pug/about-us.pug
@@ -14,7 +14,7 @@ block content
 		+first-banner('We create <br> <span>digital</span> products', {n: 'banner-about', w: '1920', h: '1100'}, 'about-us__banner')
 
 		section.about-video-section.about-us__stat
-			.about-video-section__container.container-fluid
+			.about-video-section__container.container.container--size-large
 				.row
 					.about-video-section__main.col-12.col-md
 						.about-video-section__title(data-aos="fade-up") Our team consists of practitioners who have 15 years of experience in launching and managing projects. <br> worked with a wide array of clients across the globe to <br> apply design fundamentals of elegance, simplicity
