--- a/source/pug/modules/creative-hero.pug
+++ b/source/pug/modules/creative-hero.pug
@@ -1,5 +1,5 @@
 section.creative-hero
-	.creative-hero__container.container-fluid
+	.creative-hero__container
 
 		.creative-hero__main
 			h1.creative-hero__title Undertake projects of&nbsp;any complexity
