--- a/source/pug/modules/hero.pug
+++ b/source/pug/modules/hero.pug
@@ -5,10 +5,11 @@ section.hero
 			img(src="img/picture/home/hero.jpg", srcset="img/picture/home/hero@2x.jpg 2x", width="1920", height="1080", alt="")
 	.hero__container.container.container--size-large
 		header.hero__header
-			h1.hero__title
-				| Unique Design in step
-				span with the times
-			+arrow-link('About us', URLS.pages.about, 'hero__more')
+			.container.container--size-large
+				h1.hero__title
+					| Unique Design in step
+					span with the times
+				+arrow-link('About us', URLS.pages.about, 'hero__more')
 		.hero__content
 			.hero__vertical.vertical-logo
 				.vertical-logo__layer.vertical-logo__layer--yellow
