--- a/source/pug/modules/plans-section.pug
+++ b/source/pug/modules/plans-section.pug
@@ -1,7 +1,7 @@
 section.plans-section
-	.plans-section__container.container-fluid
+	.plans-section__container
 		.row
-			.plans-section__item.card-price.col-12.col-sm-6.col-lg-4(data-aos="fade-up")
+			.plans-section__item.card-price.col-12.col-lg-6.col-xl-4(data-aos="fade-up")
 				.card-price__wrapper
 					.card-price__plan(data-aos="fade-up") Basic
 					.card-price__price(data-aos="fade-up") <sup>$</sup> 29 <span>/ mo</span>
@@ -10,7 +10,7 @@ section.plans-section
 						li(data-aos="fade-up") Kind cattle won't bearing.
 						li(data-aos="fade-up") own night two above.
 					+btn(false, 'join now', '#', 'card-price__btn')(data-aos="fade-up")
-			.plans-section__item.card-price.card-price--gradient.col-12.col-sm-6.col-lg-4(data-aos="fade-up")
+			.plans-section__item.card-price.card-price--gradient.col-12.col-lg-6.col-xl-4(data-aos="fade-up")
 				.card-price__wrapper
 					.card-price__plan(data-aos="fade-up") Standard
 					.card-price__price(data-aos="fade-up") <sup>$</sup> 39 <span>/ mo</span>
@@ -19,7 +19,7 @@ section.plans-section
 						li.yellow(data-aos="fade-up") Kind cattle won't bearing.
 						li(data-aos="fade-up") own night two above.
 					+btn(false, 'join now', '#', 'btn--outline card-price__btn card-price__btn--outline')(data-aos="fade-up")
-			.plans-section__item.card-price.col-12.col-sm-6.col-lg-4(data-aos="fade-up")
+			.plans-section__item.card-price.col-12.col-lg-6.col-xl-4(data-aos="fade-up")
 				.card-price__wrapper
 					.card-price__plan(data-aos="fade-up") Advanced
 					.card-price__price(data-aos="fade-up") <sup>$</sup> 49 <span>/ mo</span>
