--- a/source/pug/modules/services-section.pug
+++ b/source/pug/modules/services-section.pug
@@ -1,5 +1,5 @@
 section.services-section
-	.services-section__container.services-section__container--small.container-fluid
+	.services-section__container.services-section__container--small
 		h2.services-section__title(data-aos="fade-up") Services
 
 		.services-section__main
