--- a/source/pug/modules/vcard.pug
+++ b/source/pug/modules/vcard.pug
@@ -1,13 +1,13 @@
 article.vcard
 	.vcard__container.container
 		header.vcard__header.row
-			.col-12.col-sm-9
-				.vcard__post(data-aos="fade-up") A product Designer
-				h1.vcard__title(data-aos="fade-up") Scott <br>Patterson
-			.col-12.col-sm-3.align-self-end.text-right
-				+arrow-link('Portfolio', URLS.projects.masonry, 'about-mamber__more arrow-link--theme-yellow')(data-aos="fade-up")
+			.col-12.col-md-9
+				.vcard__post A product Designer
+				h1.vcard__title Scott <br>Patterson
+			.col-12.col-md-3.align-self-end.text-md-right
+				+arrow-link('Portfolio', URLS.projects.masonry, 'vcard__more arrow-link--theme-yellow')
 
-		.vcard__main(data-aos="fade-up")
+		.vcard__main
 			.vcard__great Hi! My name is Scott Patterson. I have accumulated 7 <br>years of experience in graphic and web design,
 
 			table
