--- a/source/pug/services.pug
+++ b/source/pug/services.pug
@@ -15,7 +15,7 @@ block header
 
 block content
 	article.article.services
-		.article__container.container-fluid
+		.article__container.container.container--size-large
 			.row
 				header.article__header.col-12.col-lg-7.col-xl-6
 					h1.article__title Our <br>services
