--- a/source/pug/templates/main.pug
+++ b/source/pug/templates/main.pug
@@ -42,7 +42,7 @@ html.no-js(lang="en", class= htmlModClass)
 								source(type="image/webp", srcset="img/picture/vcard/vcard.webp 1x, img/picture/vcard/vcard@2x.webp 2x")
 								img(src="img/picture/vcard/vcard.jpg", srcset="img/picture/vcard/vcard@2x.jpg 2x", width="1920", height="1824", alt="")
 
-					.leftward-wrapper__container
+					.leftward-wrapper__container.container.container--size-large
 						block header
 						main
 							block content
