--- a/source/scss/blocks/webpage.scss
+++ b/source/scss/blocks/webpage.scss
@@ -22,7 +22,7 @@
 			main,
 			.leftward-wrapper {
 				background-color: $color-default-white;
-				box-shadow: 0 0 0 20px $color-default-white;
+				box-shadow: 0 -20px 0 20px $color-default-white;
 			}
 
 			.carousel::before {
@@ -62,7 +62,7 @@
 			main,
 			.leftward-wrapper {
 				background-color: $color-grey-e5;
-				box-shadow: 0 0 0 20px $color-grey-e5;
+				box-shadow: 0 -20px 0 20px $color-grey-e5;
 			}
 
 			.carousel::before {
