--- a/source/scss/blocks/leftward-wrapper.scss
+++ b/source/scss/blocks/leftward-wrapper.scss
@@ -4,10 +4,7 @@
 	background-color: $color-smoky;
 
 	&__container {
-		position: relative;
-		width: 100%;
-		max-width: 1920px;
-		margin: 0 auto;
+		//position: relative;
 		display: flex;
 		align-items: flex-start;
 		overflow: hidden;
