--- a/source/scss/blocks/vcard.scss
+++ b/source/scss/blocks/vcard.scss
@@ -9,6 +9,8 @@
 	}
 
 	&__container {
+		padding-left: 0;
+		padding-right: 0;
 	}
 
 	&__header {
@@ -54,6 +56,17 @@
 
 		@include media(sm) {
 			font-size: 26px;
+		}
+	}
+
+	&__more {
+		margin-top: 40px;
+
+		@include media(md) {
+			margin-bottom: 6px;
+		}
+		@include media(lg) {
+			margin-bottom: 9px;
 		}
 	}
 
