--- a/source/pug/single-post.pug
+++ b/source/pug/single-post.pug
@@ -16,8 +16,8 @@ block content
 				picture
 					source(type="image/webp" srcset="img/picture/news/banner-blog-1.webp 1x, img/picture/news/banner-blog-1@2x.webp 2x")
 					img(src="img/picture/news/banner-blog-1.jpg", srcset="img/picture/news/banner-blog-1@2x.jpg 2x", width="1920", height="1099", alt="")
-			.blog-grid__tag(data-aos="fade-up") Design
-			h1.heading.heading--size-large.blog-grid__title(data-aos="fade-up") Color cheme
+			.blog-grid__tag Design
+			h1.heading.heading--size-large.blog-grid__title Color cheme
 
 		.single-post
 			.container.container--xsmall
