--- a/source/pug/modules/carousel-section2.pug
+++ b/source/pug/modules/carousel-section2.pug
@@ -8,7 +8,7 @@ section.carousel-section
 				button.nav-btn.nav-btn--next(data-target=".__js_carousel-latest-news", type="button")
 					+icon('long-arrow-right')(width="50", height="16")
 
-			.col-4.col-md-3.align-self-md-start.text-right(data-aos="fade-up")
+			.col-4.col-md-3.align-self-md-center.ml-auto.text-right(data-aos="fade-up")
 				+arrow-link('View all', URLS.blog.masonry, 'carousel-section__more')
 
 		.carousel-section__carousel.carousel.carousel--slide-auto.swiper-container.__js_carousel-latest-news(data-aos="fade-up")
