--- a/source/pug/projects-carousel.pug
+++ b/source/pug/projects-carousel.pug
@@ -14,8 +14,8 @@ block content
 		section.carousel-section.projects-carousel__carousel
 			.carousel-section__container.container.container--size-large
 				header.carousel-section__header.row.align-items-end.align-items-md-center
-					h2.carousel-section__title.col-12.col-md-10(data-aos="fade-up") Projects
-					.carousel-section__nav.col-12.col-md-2.order-last.order-md-0.justify-content-md-end(data-aos="fade-up")
+					h2.carousel-section__title.col-12.col-md-10 Projects
+					.carousel-section__nav.col-12.col-md-2.order-last.order-md-0.justify-content-md-end
 						button.nav-btn.nav-btn--prev(data-target=".__js_carousel-latest-projects", type="button")
 							+icon('long-arrow-left')(width="50", height="16")
 						button.nav-btn.nav-btn--next(data-target=".__js_carousel-latest-projects", type="button")
