--- a/source/pug/modules/features.pug
+++ b/source/pug/modules/features.pug
@@ -5,6 +5,7 @@ section.features
 		.row
 			.col-12.col-lg-10
 				.features__description(data-aos="fade-up") Our intelligent digital strategy and a pragmatic and thoughtful approach to solving business calls deliver a successful framework for both you and your audience.
+		.features__full-height.row
 			.col-12.col-md-8.col-lg-6
 				a.features__card.features__card--size-large.feature-card(href="#", data-aos="fade-up")
 					span.feature-card__image
@@ -14,6 +15,7 @@ section.features
 					span.feature-card__caption We ask right <br>questions
 			.col-12.col-md-4.col-lg-3
 				.features__text(data-aos="fade-up") In the design process, they create both functional and beautiful things. The team possesses unique individuality and strong qualifications and can easily translate something so abstract and visionary into a digital experience. They always put the clients first no matter how complicated the tasks are”.
+		.row
 			.col-12
 				.row
 					.col-12.col-sm-6.col-md-5.d-flex
