--- a/source/pug/single-project.pug
+++ b/source/pug/single-project.pug
@@ -29,7 +29,7 @@ block content
 					.single-project__hero-text Alienum phaedrum torquatos nec eu, detr periculis ex, nihil expetendis in mei. Mei an pericula
 						|  euripidis hinc partem ei est. Eos ei nisl graecis, vix aperiri consequat an. Eius lorem tincidunt vix at, vel
 						|  pertinax sensibus id, error epicurei mea et. Mea facilisis urbanitas moderatius id. Vis ei rationibus definiebas.
-			//section.projects-listing
+			//-section.projects-listing
 
 				ul.projects-listing__list
 					li.projects-listing__item.project-card.row
