--- a/source/scss/blocks/service-preview.scss
+++ b/source/scss/blocks/service-preview.scss
@@ -72,6 +72,16 @@
 			display: none;
 		}
 
+		@include media(sm) {
+			padding: 32px 32px 38px;
+			font-size: 20px;
+		}
+
+		@include media(md) {
+			padding: 32px 45px 38px;
+			font-size: 26px;
+		}
+
 		@include media-max(lg) {
 			flex-grow: 1;
 		}
