--- a/source/pug/404-error.pug
+++ b/source/pug/404-error.pug
@@ -5,6 +5,7 @@ block variables
 	- let currentPage = 2.08; // Для каждой страницы уникален. Номер смотреть в файле pug/templates/_vars.pug в массивах с пунктами меню
 	- let currentSection = 2; // // Для каждой раздела уникален. Home -1, projects - 2, news - 3, pages - 4
 	- let headerClasses = 'header--separator __js_fixed-header';
+	- let bodyModClass = 'no-grow';
 
 block header
 	include modules/header
