--- a/source/pug/modules/start-project--creative-page.pug
+++ b/source/pug/modules/start-project--creative-page.pug
@@ -1,5 +1,5 @@
 section.start-project
-	.start-project__container
+	.start-project__container.start-project__container--small
 		h2.start-project__title.start-project__title--size-small(data-aos="fade-up") Start A Project?
 
 		.start-project__grid
