--- a/source/pug/templates/_vars.pug
+++ b/source/pug/templates/_vars.pug
@@ -156,11 +156,11 @@
 	let MEMBERS_CARDS_2 = [
 		{name: 'Bobby Fish', post: 'Designer', addCl: 'team__item--first', bootstrapCl: 'col-lg-5', image: {url: '3', w: '474', h: '450'}},
 		{name: 'Sam Flex', post: 'Director', image: {url: '1', w: '385', h: '548'}},
-		{name: 'Kate Larson', post: 'Manager', image: {url: '2', w: '355', h: '241'}},
-		{name: 'Amanda James', post: 'Programmer', image: {url: '5', w: '326', h: '548'}},
-		{name: 'Amanda James', post: 'Programmer', addCl: 'team__item--margin-negative',  bootstrapCl: 'offset-lg-4', image: {url: '4-1', w: '355', h: '548'}},
+		{name: 'Kate Larson', post: 'Manager', addCl: 'team__item--center', image: {url: '2', w: '355', h: '241'}},
+		{name: 'Amanda James', post: 'Programmer', addCl: 'team__item--right', image: {url: '5', w: '326', h: '548'}},
+		{name: 'Amanda James', post: 'Programmer', addCl: 'team__item--margin-negative team__item--center',  bootstrapCl: 'offset-lg-4', image: {url: '4-1', w: '355', h: '548'}},
 		{name: 'Amanda James', post: 'Programmer', addCl: 'team__item--left-shift', bootstrapCl: 'col-lg-6 align-self-lg-end', image: {url: '6', w: '355', h: '281'}},
-		{name: 'Bobby Fish', post: 'Designer', addCl: 'team__item--left-small-shift', bootstrapCl: 'col-lg-5 offset-lg-1', image: {url: '7', w: '474', h: '450'}}
+		{name: 'Bobby Fish', post: 'Designer', addCl: 'team__item--left-small-shift team__item--right', bootstrapCl: 'col-lg-5 offset-lg-1', image: {url: '7', w: '474', h: '450'}}
 	];
 
 	let SKILLS = [
@@ -171,7 +171,7 @@
 	];
 
 	let VERTICAL_PROJECTS = [
-		{title: '<span>Nike</span> <span>Sneakers</span> <span>Photo</span>', category: '', image: '1'},
+		{title: '<span>Nike</span> <span>Sneakers</span> <span>Photo</span>', category: 'Photo', image: '1'},
 		{title: '<span>Mate</span> <span>Bottle</span> <span>Branding</span>', category: 'Design', image: '2'},
 		{title: '<span>Balanced</span> <span>Color</span> <span>Scheme</span>', category: 'Photography', image: '3'},
 		{title: '<span>Sony</span> <span>Headphones</span>', category: 'Product design', image: '4'}
