--- a/source/pug/mixins/_first-banner.pug
+++ b/source/pug/mixins/_first-banner.pug
@@ -1,6 +1,6 @@
 mixin first-banner(title, pic, className)
 	.first-banner(class=className)
-		.first-banner__image.__js_parallax
+		.first-banner__image
 			picture
 				source(type="image/webp", srcset="img/picture/first-banner/" + pic.n + ".webp 1x, img/picture/first-banner/" + pic.n + "@2x.webp 2x")
 				img(src="img/picture/first-banner/" + pic.n + ".jpg", srcset="img/picture/first-banner/" + pic.n + "@2x.jpg 2x", width= pic.w, height= pic.h, alt="")
