--- a/source/scss/blocks/about-video-section.scss
+++ b/source/scss/blocks/about-video-section.scss
@@ -25,6 +25,7 @@
 			display: flex;
 			flex-direction: column;
 			justify-content: space-between;
+			margin-right: 20px;
 		}
 
 		@include media(xl) {
@@ -95,6 +96,8 @@
 	}
 
 	&__text {
+		margin-left: 30px;
+
 		@include media(xl) {
 			max-width: 366px;
 		}
