--- a/source/scss/blocks/faq.scss
+++ b/source/scss/blocks/faq.scss
@@ -42,15 +42,13 @@
 
 		.discuss-project {
 			&__title {
+				max-width: 100%;
 				margin-left: 0;
+				margin-top: 0;
 				text-align: left;
 
 				@include media(md) {
 					margin-bottom: 91px;
-				}
-
-				@include media(lg) {
-					margin-top: -125px;
 				}
 			}
 
