--- a/source/scss/blocks/service-detail.scss
+++ b/source/scss/blocks/service-detail.scss
@@ -65,15 +65,13 @@
 
 		.discuss-project {
 			&__title {
+				max-width: 100%;
 				margin-left: 0;
+				margin-top: 0;
 				text-align: left;
 
 				@include media(md) {
 					margin-bottom: 82px;
-				}
-
-				@include media(lg) {
-					margin-top: -116px;
 				}
 			}
 
