--- a/source/scss/blocks/team-section.scss
+++ b/source/scss/blocks/team-section.scss
@@ -37,7 +37,7 @@
 	}
 
 	&__grid {
-		@include media(xs) {
+		@include media(md) {
 			display: flex;
 			flex-wrap: wrap;
 			margin-left: -24px;
@@ -64,7 +64,7 @@
 	&__item {
 		margin-top: 40px;
 
-		@include media(xs) {
+		@include media(md) {
 			width: calc(50% - 24px);
 			margin-left: 24px;
 
