--- a/source/scss/blocks/team.scss
+++ b/source/scss/blocks/team.scss
@@ -11,6 +11,9 @@
 		}
 
 		&--first {
+			margin-left: auto;
+			text-align: right;
+
 			@include media(lg) {
 				margin-top: 16px;
 			}
@@ -18,6 +21,14 @@
 			@include media(xl) {
 				padding-left: 52px;
 			}
+		}
+
+		&--center {
+			text-align: center;
+		}
+
+		&--right {
+			text-align: right;
 		}
 
 		&--margin-negative {
