--- a/source/scss/common/global.scss
+++ b/source/scss/common/global.scss
@@ -22,10 +22,11 @@ html {
 		}
 
 		::-webkit-scrollbar-track {
+			background-color: transparent;
 		}
 
 		::-webkit-scrollbar-track-piece {
-			background-color: $color-grey;
+			background-color: transparent;
 		}
 
 		::-webkit-scrollbar-thumb {
@@ -71,12 +72,17 @@ body {
 	white-space: normal;
 
 	background-color: $color-smoky;
+
+	&.no-grow main {
+		flex-grow: unset;
+	}
 }
 
 .container,
 .container-fluid {
+	padding: 0 19px;
+
 	@include media(xxl) {
-		padding: 0 15px;
 		//max-width: 1750px;
 	}
 
