--- a/source/pug/agency-default.pug
+++ b/source/pug/agency-default.pug
@@ -20,26 +20,26 @@ block content
 				.col-12.col-lg-10
 					.features__description(data-aos="fade-up") Our intelligent digital strategy and a pragmatic and thoughtful approach to solving business calls deliver a successful framework for both you and your audience.
 			.row
-				.col-12.col-md-8.col-lg-6
+				.col-12.col-md-8.col-lg-5
 					a.features__card.features__card--size-large.feature-card(href="#", data-aos="fade-up")
 						span.feature-card__image
 							picture
 								source(type="image/webp" srcset="img/picture/home/feature-1.webp 1x, img/picture/home/feature-1@2x.webp 2x")
 								img(src="img/picture/home/feature-1.jpg", srcset="img/picture/home/feature-1@2x.jpg 2x", width="810", height="529", alt="questions")
 						span.feature-card__caption We ask right <br>questions
-				.col-12.col-md-4.col-lg-3
+				.col-12.col-md-4.col-lg-7
 					.features__text(data-aos="fade-up") In the design process, they create both functional and beautiful things. The team possesses unique individuality and strong qualifications and can easily translate something so abstract and visionary into a digital experience. They always put the clients first no matter how complicated the tasks are”.
 			.row
 				.col-12
 					.row
-						.col-12.col-sm-6.col-md-5.d-flex
+						.col-12.col-md-8.col-lg-5.d-flex
 							a.features__card.features__card--size-small.feature-card.feature-card--mobile-same-size(href="#", data-aos="fade-up")
 								span.feature-card__image
 									picture
 										source(type="image/webp" srcset="img/picture/home/feature-3.webp 1x, img/picture/home/feature-3@2x.webp 2x")
 										img(src="img/picture/home/feature-3.jpg", srcset="img/picture/home/feature-3@2x.jpg 2x", width="410", height="490", alt="Concept")
 								span.feature-card__caption We achieve the <br>goal
-						.col-12.col-sm-6.col-md-7
+						.col-12.col-md-4.col-lg-7
 							a.features__card.features__card--size-middle.feature-card.feature-card--mobile-same-size(href="#", data-aos="fade-up")
 								span.feature-card__image
 									picture
