--- a/source/scss/blocks/features.scss
+++ b/source/scss/blocks/features.scss
@@ -66,7 +66,7 @@
 				@include media(lg) {
 					margin-top: 338px;
 					margin-left: auto;
-					margin-right: 33px;
+					margin-right: 0;
 				}
 			}
 
