--- a/source/pug/agency-default.pug
+++ b/source/pug/agency-default.pug
@@ -17,7 +17,8 @@ block content
 
 
 			.row
-				.col-12.col-lg-10
+				.col-12.col-md-0.col-lg-4
+				.col-12.col-md-12.col-lg-8
 					.features__description(data-aos="fade-up") Our intelligent digital strategy and a pragmatic and thoughtful approach to solving business calls deliver a successful framework for both you and your audience.
 			.row
 				.col-12.col-md-8.col-lg-5
@@ -71,7 +72,7 @@ block content
 				.contact-section__aside.col-12.col-lg(data-aos="fade-up")
 					.discuss-project.discuss-project--no-padding.col-12
 						.discuss-project__wrapper(data-aos="fade-up")
-							.discuss-project__title(data-aos="fade-up") Contact
+							.discuss-project__title(data-aos="fade-up") Send request
 
 							form(action="#", method="post")
 								.row.justify-content-between.gx-0
