--- a/source/pug/portfolio-tooltip.pug
+++ b/source/pug/portfolio-tooltip.pug
@@ -5,7 +5,7 @@ block variables
 	- let currentPage = 3.06; // Для каждой страницы уникален. Номер смотреть в файле pug/templates/_vars.pug в массивах с пунктами меню
 	- let currentSection = 3; // // Для каждой раздела уникален. Home -1, projects - 2, news - 3, pages - 4
 	- let headerClasses = 'header--absolute __js_fixed-header';
-	- let bodyModClass = '';
+	- let bodyModClass = 'no-grow';
 
 block header
 	include modules/header
